syntax = "proto3";

option go_package = "./hello";

package hello;

message HelloRequest {
  string message = 1;
}

message HelloResponse {
  string message = 1;
}

service Hello {
  rpc UnaryHello(HelloRequest) returns (HelloResponse) {}
}